<resources>
    <string name="app_name">懒人外卖</string>
    <string name="title_activity_balance">BalanceActivity</string>
    <string name="loading">正在登录...</string>
    <string name="submiting">正在提交数据...</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="hint_edit_feedback_content">请输入反馈内容（最多200字）</string>
    <string name="hint_edit_contact_way">请输入您的联系方式（可选）</string>
    <string name="label_address_create">新增地址</string>
    <string name="label_link_forget_password">忘记密码？</string>
    <string name="label_link_register">去注册</string>
    <string name="hint_edit_name">请输入您的名字</string>
    <string name="hint_edit_phone">请输入您的手机号</string>
    <string name="hint_edit_address_summary">请输入地址(可点击地图自动填入)</string>
    <string name="hint_edit_address_detail">(选填)详细地址(楼层,门牌号等)</string>
    <string name="label_male">先生</string>
    <string name="label_female">女士</string>
    <string name="btn_confirm_update">确认修改</string>
    <string name="btn_confirm_add">确认添加</string>
    <string name="hint_edit_remark">请输入备注（最多200字）</string>
    <string name="label_common_remark">常用备注</string>
    <string name="warning">提示:因打开网络连接存在一定时间延迟，故请在网络已正常连接后再点击“确定”按钮，以保证顺利登录！</string>
    <string name="text_wifi">WiFi</string>
    <string name="text_mobile_data">网络</string>
    <string name="confirm">确定</string>
    <string name="label_price">￥%1$.1f</string>
    <string name="label_discount_price">-￥%1$.1f</string>
    <string name="label_zero_count">0份</string>
    <string name="label_zero_price">￥0</string>
    <string name="label_real_payment">实付</string>
    <string name="label_discount">优惠</string>
    <string name="label_origin_price">原价</string>
    <string name="label_count">%1$d份</string>
    <string name="label_quantity">x %1$d</string>
    <string name="label_month_sales">月售%1$d份</string>
    <string name="label_left_count">剩余%1$d份</string>
    <string name="label_discount_amount">已优惠￥%1$.1f</string>
    <string name="label_total_amount">共计￥%1$.1f</string>
    <string name="label_please_login">请先登录</string>
    <string name="label_choose_payment_source">请选择支付渠道</string>
    <string name="label_sold_out">已售完</string>
    <string name="label_business_multi_content">起送 ￥%1$s   配送 ￥%2$s   平均%3$s分钟</string>
    <string name="label_address">%1$s %2$s</string>
    <string name="label_current_version_name">当前版本为%1$s</string>
    <string name="label_clear">清空</string>
    <string name="label_distance_price">还差￥%1$.1f起送</string>
    <string name="btn_settle">去结算</string>
    <string name="label_empty_data">当前还没有数据</string>
    <string name="label_click_button_to_retry">点击按钮重试</string>
    <string name="btn_reload">重新加载</string>
    <string name="label_error_network">网络出现错误，请稍后重试!</string>
    <string name="label_error_network_is_bad">当前网络环境较差</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="action_ok">确定</string>
    <string name="activity_home_class_title_air_quality_index">空气质量指数</string>
    <string name="activity_home_class_title_data_source">数据来源 杨半仙天气预测</string>
    <string name="activity_home_class_title_hour_forecast">逐3小时预报</string>
    <string name="activity_home_class_title_living_index">生活指数</string>
    <string name="activity_home_class_title_precipitation_probability">降水概率</string>
</resources>