<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffffff" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="@string/warning" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/image_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi_unconnected"
                android:contentDescription="@null" />

            <ToggleButton
                android:id="@+id/toggle_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/text_wifi"
                android:textOff="@string/text_wifi" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/mobile_data_unconnected" />

            <ToggleButton
                android:id="@+id/toggle_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/text_mobile_data"
                android:textOff="@string/text_mobile_data" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="5dip"
        android:text="@string/confirm" />

</LinearLayout>