<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.foodordering.Activity_Register">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_radius_all_normal"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="联系人"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etUserName"
                style="@style/Widget.LazyOrder.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_normal"
                android:background="@null"
                android:hint="@string/hint_edit_name" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cell_normal"
            android:gravity="center_vertical">

            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/sel_common_check_bg"
                    android:paddingLeft="@dimen/spacing_micro"
                    android:text="@string/label_male"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_normal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_major"
                    android:layout_marginStart="@dimen/spacing_major"
                    android:button="@drawable/sel_common_check_bg"
                    android:paddingLeft="@dimen/spacing_micro"
                    android:text="@string/label_female"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/font_normal" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="手机号码"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/Widget.LazyOrder.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_normal"
                android:background="@null"
                android:hint="请输入手机号码" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="昵 称"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNickName"
                style="@style/Widget.LazyOrder.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_normal"
                android:background="@null"
                android:hint="请输入昵称" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="密 码"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/Widget.LazyOrder.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_normal"
                android:background="@null"
                android:hint="请输入密码" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke"
            android:background="@color/divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="确认密码"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etRePassword"
                style="@style/Widget.LazyOrder.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_normal"
                android:background="@null"
                android:hint="请再次输入密码" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke"
            android:background="@color/divider" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="地 址"
                android:textColor="@color/primary_text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etAddress"
                style="@style/Widget.LazyOrder.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cell_normal"
                android:background="@null"
                android:hint="请输入地址" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/stroke"
            android:background="@color/divider" />

    </LinearLayout>

    <Button
        android:id="@+id/register"
        style="@style/Widget.LazyOrder.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_normal"
        android:layout_marginLeft="@dimen/spacing_major"
        android:layout_marginRight="@dimen/spacing_major"
        android:layout_marginTop="10dp"
        android:text="注    册" />
</LinearLayout>
